Fix for input on safari

--- a/css/contact/contact-form.css
+++ b/css/contact/contact-form.css
@@ -102,6 +102,7 @@ input {
     color: #fff;
     font-size: 12px;
     text-transform: uppercase;
+    -webkit-appearance: none;
 }
 
 .submit-input input:hover {
